sources/tpfinal_V2.0/tpfinal_V2.0.sdk/.metadata/.plugins/org.eclipse.cdt.ui/TestAPP.build.log
20:59:16 **** Incremental Build of configuration Debug for project TestAPP ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/lab2.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lab2.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/lab2.d" -MT"src/lab2.o" -o "src/lab2.o" "../src/lab2.c"
../src/lab2.c: In function 'main':
../src/lab2.c:15:28: error: 'XPAR_SWITCHES_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_SWITCHS_DEVICE_ID'?
     XGpio_Initialize(&dip, XPAR_SWITCHES_DEVICE_ID);
                            ^~~~~~~~~~~~~~~~~~~~~~~
                            XPAR_SWITCHS_DEVICE_ID
../src/lab2.c:15:28: note: each undeclared identifier is reported only once for each function it appears in
../src/lab2.c:28:4: warning: implicit declaration of function 'sleep'; did you mean 'strsep'? [-Wimplicit-function-declaration]
    sleep(1);
    ^~~~~
    strsep
make: *** [src/subdir.mk:29: src/lab2.o] Error 1

20:59:17 Build Finished (took 818ms)

